[gd_scene load_steps=11 format=2]

[ext_resource path="res://environments/planetsideEnvironment.tres" type="Environment" id=1]
[ext_resource path="res://libs/wallLib.tres" type="MeshLibrary" id=2]
[ext_resource path="res://elements/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/levelStart.tscn" type="PackedScene" id=4]
[ext_resource path="res://elements/controlOff.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/mazeWallGridMap.gd" type="Script" id=7]
[ext_resource path="res://scripts/fallZone.gd" type="Script" id=8]
[ext_resource path="res://elements/goal.tscn" type="PackedScene" id=9]
[ext_resource path="res://elements/controlOn.tscn" type="PackedScene" id=11]

[sub_resource type="BoxShape" id=9]

[node name="level_4" type="Spatial"]

[node name="environment" type="Node" parent="."]

[node name="worldEnvironment" type="WorldEnvironment" parent="environment"]
environment = ExtResource( 1 )

[node name="directionalLight" type="DirectionalLight" parent="environment"]
transform = Transform( 1, 0, 0, 0, -0.996195, 0.0871556, 0, -0.0871556, -0.996195, 0, 25, -100 )
light_color = Color( 0.584314, 0.823529, 1, 1 )
light_energy = 0.1

[node name="gridMaps" type="Spatial" parent="environment"]

[node name="mazeFloorGridMap" type="GridMap" parent="environment/gridMaps"]
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="mazeWallGridMap" type="GridMap" parent="environment/gridMaps"]
transform = Transform( 1, 0, 0, 0, 0.32, 0, 0, 0, 1, 0, 0, 0 )
mesh_library = ExtResource( 2 )
data = {
"cells": PoolIntArray(  )
}
script = ExtResource( 7 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="animationPlayer" type="AnimationPlayer" parent="environment/gridMaps/mazeWallGridMap"]

[node name="platformGridMap" type="GridMap" parent="environment/gridMaps"]
mesh_library = ExtResource( 2 )
use_in_baked_light = true
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 32, 0 )
}

[node name="fallZone" type="Area" parent="environment"]
transform = Transform( 125, 0, 0, 0, 1, 0, 0, 0, 125, 0, -20, 0 )
script = ExtResource( 8 )

[node name="collisionShape" type="CollisionShape" parent="environment/fallZone"]
shape = SubResource( 9 )

[node name="controlControllers" type="Node" parent="."]

[node name="levelStart" parent="controlControllers" instance=ExtResource( 4 )]

[node name="controlOff" parent="controlControllers" instance=ExtResource( 5 )]

[node name="controlOff_2" parent="controlControllers" instance=ExtResource( 5 )]

[node name="controlOn" parent="controlControllers" instance=ExtResource( 11 )]

[node name="goal" parent="controlControllers" instance=ExtResource( 9 )]
nextLevel = "res://levels/startScreen.tscn"

[node name="player" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 125, 0 )

[connection signal="animation_finished" from="environment/gridMaps/mazeWallGridMap/animationPlayer" to="controlControllers/levelStart" method="_on_animationPlayer_animation_finished"]
[connection signal="body_entered" from="environment/fallZone" to="environment/fallZone" method="_on_fallZone_body_entered"]
[connection signal="body_entered" from="controlControllers/levelStart" to="environment/gridMaps/mazeWallGridMap" method="_on_levelStart_body_entered"]
